@@ -12,6 +12,7 @@ import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -33,7 +34,7 @@ public class CartItemService {
     public List<CartItemDto> findByCartId(Long cartId) {
         return cartItemRepository.findByCartId(cartId).stream()
                 .map(cartItemMapper::mapToDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional
